adapter/jolie/src/main/jolieGrammar/grammar.txt
Program       -> Decl* EOF
Decl            -> ImportDecl | InterfaceDecl | TypeDecl | ServiceDecl

ImportDecl      -> Import | Include
  Import          -> "from" ID "import" ID Line?
  Include         -> "include" STRING

InterfaceDecl   -> "interface" "extender"? ID "{" RequestResponseDecl? OneWayDecl? "}"
  RequestResponseDecl     -> ( "requestResponse" | "RequestResponse" ) ":" RequestResponseElement ("," RequestResponseElement)*
    RequestResponseElement  -> ID "(" ID ")" "(" ID ")"
  OneWayDecl              -> ( "oneWay" | "OneWay" ) ":" OneWayElement ("," OneWayElement)*
    OneWayElement           -> ID "(" ID ")"

TypeDecl        -> "type" ID (":" ID ("|" ID)*)? Block?

ServiceDecl     -> "service" ID ( "(" anyToken* ")" )? "{" Service* "}"
  Service         -> Execution | Embed | Embedded | InputPort | OutputPort | Init | Main | Courier | DefineProcedure | Line
    Execution       -> "execution" ( ":" ID ) | ( "{" ID "}" )
    Embed           -> embed ID ( "(" ID* ")" )? ("in" ID | "as" ID)
    Embedded        -> "embedded" Block
    InputPort       -> "inputPort" ID "{" PortLocation? PortProtocol? PortInterfaces? PortAggregates? PortRedirects? "}"
    OutputPort      -> "outputPort" ID "{" PortLocation? PortProtocol? PortInterfaces? "}"
      PortLocation    -> ( "location" | "Location" ) ":" anyToken*
      PortProtocol    -> ( "protocol" | "Protocol" ) ":" anyToken*
      PortInterfaces  -> ( "interfaces" | "Interfaces" ) ":" anyToken*
      PortAggregates  -> ( "aggregates" | "Aggregates" ) ":" anyToken*
      PortRedirects   -> ( "redirects" | "Redirects" ) ":" anyToken*
    Init            -> "init" Block
    Main            -> "main" Block
    Courier         -> "courier" "<" ID ">" Block
    DefineProcedure -> "define" ID Block

Block           -> "{" Line* "}" // keep track of open and close curly braces
Line            -> _* ( '\n' | specifiedToken ) // '_' means any character
